examples/bad/14_1_notype_list_init.soy
a = []; # cannot initialize list without type, try a = [int] instead